<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterUserActivity"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textColor="@color/titleColor"
            android:textSize="22sp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="22dp"
        app:layout_constraintTop_toBottomOf="@id/ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/et_hint_name"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:background="@drawable/selector_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/et_hint_lastname"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:background="@drawable/selector_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/et_hint_age"
                android:inputType="number"
                android:maxLength="3"
                android:background="@drawable/selector_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:singleLine="true"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_borndate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/et_hint_borndate"
                android:inputType="text"
                android:maxLength="10"
                android:background="@drawable/selector_input"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:singleLine="true"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_btn"
            android:text="@string/btn_text_register"
            android:textColor="@color/buttonTextColor"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>